--- a/Chat/Chat.xcodeproj/xcshareddata/xcschemes/Chat.xcscheme
+++ b/Chat/Chat.xcodeproj/xcshareddata/xcschemes/Chat.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1250"
+   LastUpgradeVersion = "1300"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,7 +14,7 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "877FB5A826F3FFB7009DF95D"
+               BlueprintIdentifier = "876BABF526FF38E800D5BF31"
                BuildableName = "Chat.app"
                BlueprintName = "Chat"
                ReferencedContainer = "container:Chat.xcodeproj">
@@ -44,7 +44,7 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "877FB5A826F3FFB7009DF95D"
+            BlueprintIdentifier = "876BABF526FF38E800D5BF31"
             BuildableName = "Chat.app"
             BlueprintName = "Chat"
             ReferencedContainer = "container:Chat.xcodeproj">
@@ -52,12 +52,12 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "DEBUG_LOG_APP_LIFE"
-            isEnabled = "YES">
+            argument = "DEBUG_LOG_VC_LIFE"
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "DEBUG_LOG_VC_LIFE"
-            isEnabled = "YES">
+            argument = "DEBUG_LOG_APP_LIFE"
+            isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
@@ -71,7 +71,7 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "877FB5A826F3FFB7009DF95D"
+            BlueprintIdentifier = "876BABF526FF38E800D5BF31"
             BuildableName = "Chat.app"
             BlueprintName = "Chat"
             ReferencedContainer = "container:Chat.xcodeproj">
