FIX: UIStackView layers works only on iOS14.0+

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ xcuserdata/
 *.xcscmblueprint
 .DS_Store
 
+Chat/Chat.xcodeproj/project.xcworkspace/xcuserdata/sergej.xcuserdatad/UserInterfaceState.xcuserstate
