--- a/Chat/Chat.xcodeproj/xcshareddata/xcschemes/Chat.xcscheme
+++ b/Chat/Chat.xcodeproj/xcshareddata/xcschemes/Chat.xcscheme
@@ -56,6 +56,10 @@
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
+            argument = "-com.apple.CoreData.SQLDebug 1"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "DEBUG_LOG_MESSAGES_CONTENT"
             isEnabled = "YES">
          </CommandLineArgument>
