FIX: Themes id incorrect

--- a/Chat/Chat.xcodeproj/xcshareddata/xcschemes/Chat.xcscheme
+++ b/Chat/Chat.xcodeproj/xcshareddata/xcschemes/Chat.xcscheme
@@ -61,11 +61,11 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "DEBUG_LOG_MESSAGES_CONTENT"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "DEBUG_LOG_CHANNELS_CONTENT"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "DEBUG_LOG_APP_LIFE"
