--- a/Chat/Chat/GoogleService-Info.plist
+++ b/Chat/Chat/GoogleService-Info.plist
@@ -7,7 +7,7 @@
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.964672379642-9dvdf650cvg32nsm77lrni4q8u8butp4</string>
 	<key>API_KEY</key>
-	<string>AIzaSyBCdmzgB9e75L_6w_W4UHcBj235srK6_64</string>
+	<string>$(FIREBASE_API_KEY)</string>
 	<key>GCM_SENDER_ID</key>
 	<string>964672379642</string>
 	<key>PLIST_VERSION</key>
