--- a/Chat/Chat/Info.plist
+++ b/Chat/Chat/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Pixabay parameters</key>
+	<string>$(PIXABAY_PARAMETERS)</string>
+	<key>Pixabay host</key>
+	<string>$(PIXABAY_HOST)</string>
+	<key>Pixabay API key</key>
+	<string>$(PIXABAY_API_KEY)</string>
 	<key>CFBundleIcons</key>
 	<dict/>
 	<key>CFBundleIcons~ipad</key>
