--- a/.github/workflows/.github.yml
+++ b/.github/workflows/.github.yml
@@ -10,4 +10,4 @@ jobs:
         ruby-version: 2.6
         bundler-cache: true
     - name: Run
-      run: bundle exec fastlane build_and_run_tests
+      run: bundle exec fastlane ios build_and_run_tests
