--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ xcuserdata/
 .DS_Store
 
 Chat/Chat.xcodeproj/project.xcworkspace/xcuserdata/sergej.xcuserdatad/UserInterfaceState.xcuserstate
+Chat/Config.xcconfig
