--- a/.github/workflows/.github.yml
+++ b/.github/workflows/.github.yml
@@ -2,7 +2,7 @@ name: UNIT/UI_tests
 on: [push]
 jobs: 
   build:
-    runs-on: macos-latest, self-hosted
+    runs-on: macos, self-hosted
     steps:
     - uses: actions/checkout@v2
     - uses: ruby/setup-ruby@v1
