--- a/.github/workflows/.github.yml
+++ b/.github/workflows/.github.yml
@@ -2,10 +2,12 @@ name: UNIT/UI_tests
 on: [push]
 jobs: 
   build:
-    runs-on: macos-latest, self-hosted
+    runs-on: self-hosted
     steps:
     - uses: actions/checkout@v2
     - uses: ruby/setup-ruby@v1
+      env:
+        ImageOS: macos11
       with:
         ruby-version: 2.6
         bundler-cache: true
