--- a/.github/workflows/.github.yml
+++ b/.github/workflows/.github.yml
@@ -6,8 +6,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: ruby/setup-ruby@v1
-      env:
-        ImageOS: macos11
+      #env:
+        #ImageOS: macos11
       with:
         ruby-version: 2.6
         bundler-cache: true
