--- a/.github/workflows/.github.yml
+++ b/.github/workflows/.github.yml
@@ -11,5 +11,6 @@ jobs:
       with:
         ruby-version: 2.6
         bundler-cache: true
+        working-directory: /Users/sergej/actions-runner/_work
     - name: Run
       run: bundle exec fastlane ios build_and_test
