--- a/.github/workflows/.github.yml
+++ b/.github/workflows/.github.yml
@@ -1,6 +1,15 @@
 name: UNIT/UI_tests
 on: [push]
 jobs: 
+  test:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: 2.6 # Not needed with a .ruby-version file
+        bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+    - run: bundle exec rake
   build:
     runs-on: self-hosted
     steps:
