--- a/.github/workflows/.github.yml
+++ b/.github/workflows/.github.yml
@@ -1,6 +1,6 @@
-name: UNIT/UI_tests
-on: [push]
-jobs: 
+name: My workflow
+on: [push, pull_request]
+jobs:
   test:
     runs-on: ubuntu-latest
     steps:
@@ -10,15 +10,19 @@ jobs:
         ruby-version: 2.6 # Not needed with a .ruby-version file
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
     - run: bundle exec rake
-  build:
-    runs-on: self-hosted
-    steps:
-    - uses: actions/checkout@v2
-    - uses: ruby/setup-ruby@v1
-      env:
-        ImageOS: macos11
-      with:
-        ruby-version: 2.6.8
-        bundler-cache: true
-    - name: Run
-      run: bundle exec fastlane ios build_and_test
+
+#name: UNIT/UI_tests
+#on: [push]
+#jobs: 
+#  build:
+#    runs-on: self-hosted
+#    steps:
+#    - uses: actions/checkout@v2
+#    - uses: ruby/setup-ruby@v1
+#      env:
+#        ImageOS: macos11
+#      with:
+#        ruby-version: 2.6.8
+#        bundler-cache: true
+#    - name: Run
+#      run: bundle exec fastlane ios build_and_test
