--- a/.github/workflows/.github.yml
+++ b/.github/workflows/.github.yml
@@ -1,28 +1,15 @@
-name: My workflow
-on: [push, pull_request]
-jobs:
-  test:
-    runs-on: ubuntu-latest
+name: UNIT/UI_tests
+on: [push]
+jobs: 
+  build:
+    runs-on: self-hosted
     steps:
     - uses: actions/checkout@v2
     - uses: ruby/setup-ruby@v1
+      env:
+        ImageOS: macos11
       with:
-        ruby-version: 2.6 # Not needed with a .ruby-version file
-        bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-    - run: bundle exec rake
-
-#name: UNIT/UI_tests
-#on: [push]
-#jobs: 
-#  build:
-#    runs-on: self-hosted
-#    steps:
-#    - uses: actions/checkout@v2
-#    - uses: ruby/setup-ruby@v1
-#      env:
-#        ImageOS: macos11
-#      with:
-#        ruby-version: 2.6.8
-#        bundler-cache: true
-#    - name: Run
-#      run: bundle exec fastlane ios build_and_test
+        ruby-version: 2.6.8
+        bundler-cache: true
+    - name: Run
+      run: bundle exec fastlane ios build_and_test
