--- a/.github/workflows/.github.yml
+++ b/.github/workflows/.github.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: self-hosted
     needs:
       - build
-    #if: ${{ always() }}
+    if: ${{ always() }}
     #steps:
     #  - name: Notify
     #    uses: rjstone/discord-webhook-notify@v1
