--- a/.github/workflows/.github.yml
+++ b/.github/workflows/.github.yml
@@ -19,47 +19,16 @@ jobs:
     runs-on: self-hosted
     needs:
       - build
-    if: ${{ always() }}
-    #steps:
-    #  - name: Notify
-    #    uses: rjstone/discord-webhook-notify@v1
-    #    with:
-    #      severity: info
-    #      webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-      steps:
-    - name: MacOS Test Info
-      uses: rjstone/discord-webhook-notify@v1
-      with:
-        severity: info
-        details: Test succeeded.
-        webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-    - name: MacOS Test Warn
-      uses: rjstone/discord-webhook-notify@v1
-      with:
-        severity: warn
-        details: Test warning.
-        webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-    - name: MacOS Test Error
-      uses: rjstone/discord-webhook-notify@v1
-      with:
-        severity: error
-        details: Test error.
-        webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-    - name: MacOS Test Success
-      uses: rjstone/discord-webhook-notify@v1
-      if: success()
-      with:
-        severity: info
-        webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-    - name: MacOS Test Failure
-      uses: rjstone/discord-webhook-notify@v1
-      if: failure()
-      with:
-        severity: error
-        webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-    - name: MacOS Test Cancelled
-      uses: rjstone/discord-webhook-notify@v1
-      if: cancelled()
-      with:
-        severity: warn
-        webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+    steps:
+      - name: Test Success
+        uses: rjstone/discord-webhook-notify@v1
+        if: success()
+        with:
+          severity: info
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+      - name: Test Failure
+        uses: rjstone/discord-webhook-notify@v1
+        if: failure()
+        with:
+          severity: error
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
