--- a/.github/workflows/.github.yml
+++ b/.github/workflows/.github.yml
@@ -25,10 +25,12 @@ jobs:
         if: success()
         with:
           severity: info
+          details: Test Succeeded!
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
       - name: Test Failure
         uses: rjstone/discord-webhook-notify@v1
         if: failure()
         with:
           severity: error
+          details: Test Failure!
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
