Added cancelled action

--- a/.github/workflows/.github.yml
+++ b/.github/workflows/.github.yml
@@ -27,4 +27,11 @@ jobs:
         severity: error
         details: Test Failure!
         webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+    - name: Test Cancelled
+      uses: rjstone/discord-webhook-notify@v1
+      if: cancelled()
+      with:
+        severity: warn
+        details: Test Cancelled!
+        webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
       
