--- a/Chat/Chat/GoogleService-Info.plist
+++ b/Chat/Chat/GoogleService-Info.plist
@@ -3,34 +3,32 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>964672379642-9dvdf650cvg32nsm77lrni4q8u8butp4.apps.googleusercontent.com</string>
+	<string>479012751980-aqct9isiv7mlts57f1q6cjhcijpv6m2d.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.964672379642-9dvdf650cvg32nsm77lrni4q8u8butp4</string>
+	<string>com.googleusercontent.apps.479012751980-aqct9isiv7mlts57f1q6cjhcijpv6m2d</string>
 	<key>API_KEY</key>
-	<string>$(FIREBASE_API_KEY)</string>
+	<string>AIzaSyBEoPdTs8OjqKTtii55YUkM3vsz_cVa4M4</string>
 	<key>GCM_SENDER_ID</key>
-	<string>964672379642</string>
+	<string>479012751980</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>ru.tinkoff.TinkoffChat</string>
+	<string>com.sergeygryaznov.chat</string>
 	<key>PROJECT_ID</key>
-	<string>tinkoffchat-6672e</string>
+	<string>chat-a0ee8</string>
 	<key>STORAGE_BUCKET</key>
-	<string>tinkoffchat-6672e.appspot.com</string>
+	<string>chat-a0ee8.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_GCM_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:964672379642:ios:4d29aa71b4b669d61a0743</string>
-	<key>DATABASE_URL</key>
-	<string>https://tinkoffchat-6672e.firebaseio.com</string>
+	<string>1:479012751980:ios:981c2006dc9ac9fd246649</string>
 </dict>
 </plist>
